[gd_scene load_steps=42 format=3 uid="uid://bg6h6qelnbdg4"]

[ext_resource type="Script" path="res://Scripts/Level.gd" id="1_8tvoa"]
[ext_resource type="Script" path="res://Scripts/FuelSpawner.gd" id="2_b5i8p"]
[ext_resource type="Texture2D" uid="uid://jv42fxpmj1ii" path="res://Sprites/ship.png" id="2_nexx3"]
[ext_resource type="Texture2D" uid="uid://cuxv3famsy8bx" path="res://Sprites/stars.png" id="2_ngaxq"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="2_odqwc"]
[ext_resource type="Texture2D" uid="uid://do0wv6ycoc135" path="res://Sprites/black_hole1.png" id="4_6wbs4"]
[ext_resource type="Texture2D" uid="uid://b1n46wse31nxe" path="res://Sprites/black_hole10.png" id="4_phhkk"]
[ext_resource type="Shader" path="res://Blackhole.gdshader" id="5_hllvw"]
[ext_resource type="Theme" uid="uid://dcxurlovagrir" path="res://button_theme.tres" id="5_n0hgv"]
[ext_resource type="Texture2D" uid="uid://dq4ja2w8y3y5s" path="res://Sprites/black_hole2.png" id="7_5syj6"]
[ext_resource type="Shader" path="res://PlayerShader.gdshader" id="7_lynbn"]
[ext_resource type="Texture2D" uid="uid://b1ldawo73tlsr" path="res://Sprites/jet1.png" id="8_58pl1"]
[ext_resource type="Texture2D" uid="uid://bt8j57mle3ek7" path="res://Sprites/black_hole3.png" id="8_q25qj"]
[ext_resource type="Texture2D" uid="uid://dqnn5cgpytdnf" path="res://Sprites/black_hole4.png" id="9_3hnie"]
[ext_resource type="Texture2D" uid="uid://bolqm2q07pwr8" path="res://Sprites/jet2.png" id="9_h88hm"]
[ext_resource type="Texture2D" uid="uid://bg2n67etx7tq0" path="res://Sprites/black_hole5.png" id="10_icigd"]
[ext_resource type="Texture2D" uid="uid://svkwri3nnato" path="res://Sprites/jet3.png" id="10_krw8b"]
[ext_resource type="Texture2D" uid="uid://u33dpvyh4ejd" path="res://Sprites/jet4.png" id="11_5xegu"]
[ext_resource type="Texture2D" uid="uid://g6vc2vnl58wp" path="res://Sprites/black_hole6.png" id="11_uqrba"]
[ext_resource type="Texture2D" uid="uid://80svh1ydftxg" path="res://Sprites/black_hole7.png" id="12_d75fx"]
[ext_resource type="Texture2D" uid="uid://bj1886dqwfgvy" path="res://Sprites/black_hole8.png" id="13_munuf"]
[ext_resource type="Texture2D" uid="uid://dm3v6b312cs4e" path="res://Sprites/black_hole9.png" id="14_o7gn4"]
[ext_resource type="Texture2D" uid="uid://bov74l50gr1m7" path="res://Sprites/black_hole11.png" id="15_lespo"]
[ext_resource type="Texture2D" uid="uid://bfmjv7i0rnkvo" path="res://Sprites/arrow.png" id="16_nnd1i"]
[ext_resource type="Texture2D" uid="uid://dxf8rq60tktv2" path="res://Sprites/mobile.png" id="17_luiiw"]
[ext_resource type="Texture2D" uid="uid://b2eo3olq0j5ph" path="res://Sprites/pause.png" id="18_pkim3"]
[ext_resource type="Script" path="res://RandomSpawner.gd" id="27_75acc"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_vbhu4"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_y5l7y"]
noise = SubResource("FastNoiseLite_vbhu4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_svn4t"]
shader = ExtResource("5_hllvw")
shader_parameter/color_signal = Color(0.761304, 0, 0.165995, 1)
shader_parameter/size = 1.0
shader_parameter/zoom = 0.0
shader_parameter/speed = 3.0
shader_parameter/angular_speed = 2.5
shader_parameter/thickness = 0.28
shader_parameter/radius = 0.25
shader_parameter/radial_speed = 0.0499999
shader_parameter/alpha = 1.0
shader_parameter/textureNoise = SubResource("NoiseTexture2D_y5l7y")

[sub_resource type="CircleShape2D" id="CircleShape2D_l7ngj"]
radius = 17.0

[sub_resource type="Animation" id="Animation_nmm0o"]
resource_name = "loop"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("4_6wbs4"), ExtResource("4_6wbs4"), ExtResource("7_5syj6"), ExtResource("8_q25qj"), ExtResource("9_3hnie"), ExtResource("10_icigd"), ExtResource("11_uqrba"), ExtResource("12_d75fx"), ExtResource("13_munuf"), ExtResource("14_o7gn4"), ExtResource("4_phhkk"), ExtResource("15_lespo")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uv85x"]
_data = {
"loop": SubResource("Animation_nmm0o")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uepyf"]
bg_color = Color(0.121569, 0.121569, 0.121569, 0.141176)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.117647, 0.117647, 0.117647, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
expand_margin_left = 3.0
expand_margin_right = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ak05v"]
bg_color = Color(0.0980392, 0.0980392, 0.352941, 1)
border_width_left = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0588235, 0.0588235, 0.25098, 1)
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
expand_margin_left = 10.0
expand_margin_right = 10.0
shadow_color = Color(0, 0, 0, 0.854902)
shadow_size = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tsrve"]
size = Vector2(11, 8)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_osjon"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_p6wq0"]
noise = SubResource("FastNoiseLite_osjon")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jlvjp"]
shader = ExtResource("7_lynbn")
shader_parameter/dissolve_value = 1.0
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_p6wq0")

[sub_resource type="SpriteFrames" id="SpriteFrames_o1t2e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_58pl1")
}, {
"duration": 1.0,
"texture": ExtResource("9_h88hm")
}, {
"duration": 1.0,
"texture": ExtResource("10_krw8b")
}, {
"duration": 1.0,
"texture": ExtResource("11_5xegu")
}],
"loop": true,
"name": &"Ingnite",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Curve2D" id="Curve2D_u6f0h"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -12, 344, 0, 0, 0, 0, 499, 342, 0, 0, 0, 0, 499, -21, 0, 0, 0, 0, -26, -21, 0, 0, 0, 0, -28, 342, 0, 0, 0, 0, -12, 344)
}
point_count = 6

[node name="Level" type="Node2D"]
script = ExtResource("1_8tvoa")
metadata/_edit_vertical_guides_ = [261.0]
metadata/_edit_horizontal_guides_ = [180.0]

[node name="LevelTimer" type="Timer" parent="."]
autostart = true

[node name="FuelSpawnerTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="FuelSpawner" type="Node2D" parent="."]
script = ExtResource("2_b5i8p")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ngaxq")
expand_mode = 1
stretch_mode = 2

[node name="BlackHole" type="TextureRect" parent="CanvasLayer2"]
modulate = Color(0.419813, 0.419813, 0.419813, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.5
offset_top = -143.5
offset_right = 143.5
offset_bottom = 143.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_6wbs4")

[node name="Area2D" type="Area2D" parent="CanvasLayer2/BlackHole"]
position = Vector2(236, 164)

[node name="ColorRect" type="Sprite2D" parent="CanvasLayer2/BlackHole/Area2D"]
material = SubResource("ShaderMaterial_svn4t")
position = Vector2(-1.52588e-05, 0)
scale = Vector2(5, 5)
texture = ExtResource("16_nnd1i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer2/BlackHole/Area2D"]
shape = SubResource("CircleShape2D_l7ngj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer2/BlackHole"]
libraries = {
"": SubResource("AnimationLibrary_uv85x")
}
autoplay = "loop"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Score" type="Label" parent="CanvasLayer/GameUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.5
offset_right = 33.5
offset_bottom = 29.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_uepyf")
text = "Score: 0"

[node name="PowerBar" type="ProgressBar" parent="CanvasLayer/GameUI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_n0hgv")
value = 100.0

[node name="PowersLabel" type="Label" parent="CanvasLayer/GameUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -48.0
offset_right = 25.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
text = "Fuel"
horizontal_alignment = 1

[node name="MobileUI" type="Control" parent="CanvasLayer/GameUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -3.0
offset_right = -4.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Forward" type="TouchScreenButton" parent="CanvasLayer/GameUI/MobileUI"]
position = Vector2(428, 231)
rotation = 1.5708
scale = Vector2(3, 3)
texture_normal = ExtResource("16_nnd1i")
action = "ui_up"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="CanvasLayer/GameUI/MobileUI"]
position = Vector2(164, 281)
rotation = 3.14159
scale = Vector2(3, 3)
texture_normal = ExtResource("16_nnd1i")
action = "ui_right"
visibility_mode = 1

[node name="Left" type="TouchScreenButton" parent="CanvasLayer/GameUI/MobileUI"]
position = Vector2(42, 233)
scale = Vector2(3, 3)
texture_normal = ExtResource("16_nnd1i")
action = "ui_left"
visibility_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GameUI/MobileUI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = 55.0
offset_right = 175.0
offset_bottom = 105.0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -88.0
offset_bottom = 56.0
grow_horizontal = 0

[node name="ToggleMobileUI" type="Button" parent="CanvasLayer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
icon = ExtResource("17_luiiw")
flat = true
icon_alignment = 1
expand_icon = true

[node name="PauseButton" type="Button" parent="CanvasLayer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("18_pkim3")
flat = true
icon_alignment = 1
expand_icon = true

[node name="GameOverPanel" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -33.0
offset_right = 126.0
offset_bottom = 33.0
grow_vertical = 2

[node name="StartButton" type="Button" parent="CanvasLayer/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_n0hgv")
text = "Restart Game"

[node name="QuitButton" type="Button" parent="CanvasLayer/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_n0hgv")
text = "Quit"

[node name="PausePanel" type="Panel" parent="CanvasLayer"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Paused"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PausePanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -33.0
offset_right = 126.0
offset_bottom = 33.0
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="CanvasLayer/PausePanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_n0hgv")
text = "Continue Game"

[node name="StartButton" type="Button" parent="CanvasLayer/PausePanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_n0hgv")
text = "Restart Game"

[node name="QuitButton" type="Button" parent="CanvasLayer/PausePanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_n0hgv")
text = "Quit"

[node name="StartMenuPanel" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/StartMenuPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -33.0
offset_right = 126.0
offset_bottom = 33.0
grow_vertical = 2

[node name="StartButton" type="Button" parent="CanvasLayer/StartMenuPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_n0hgv")
text = "Start Game"

[node name="QuitButton" type="Button" parent="CanvasLayer/StartMenuPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_n0hgv")
text = "Quit"

[node name="Label" type="Label" parent="CanvasLayer/StartMenuPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.5
offset_right = 68.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ak05v")
text = "Black Hole Frenzy"

[node name="CharacterBody2D" type="RigidBody2D" parent="."]
position = Vector2(48, 42)
collision_mask = 3
mass = 0.01
gravity_scale = 0.0
can_sleep = false
linear_damp = 1.0
angular_damp = 2.0
script = ExtResource("2_odqwc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_tsrve")

[node name="Ship" type="Sprite2D" parent="CharacterBody2D"]
material = SubResource("ShaderMaterial_jlvjp")
rotation = 1.57079
texture = ExtResource("2_nexx3")

[node name="LeftTurbune" type="AnimatedSprite2D" parent="CharacterBody2D"]
visible = false
position = Vector2(-11, -3)
rotation = 1.57079
sprite_frames = SubResource("SpriteFrames_o1t2e")
animation = &"Ingnite"
autoplay = "Ingnite"

[node name="RightTurbune" type="AnimatedSprite2D" parent="CharacterBody2D"]
visible = false
position = Vector2(-11, 3)
rotation = 1.57079
sprite_frames = SubResource("SpriteFrames_o1t2e")
animation = &"Ingnite"
autoplay = "Ingnite"
flip_h = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_u6f0h")

[node name="RandomSpawner" type="PathFollow2D" parent="Path2D" node_paths=PackedStringArray("black_hole", "level", "level_node")]
position = Vector2(-12, 344)
rotation = -0.00391387
rotates = false
script = ExtResource("27_75acc")
black_hole = NodePath("../../CanvasLayer2/BlackHole/Area2D")
level = NodePath("../..")
level_node = NodePath("../..")

[node name="Timer" type="Timer" parent="Path2D/RandomSpawner"]
one_shot = true

[connection signal="timeout" from="LevelTimer" to="." method="_on_level_timer_timeout"]
[connection signal="timeout" from="FuelSpawnerTimer" to="FuelSpawner" method="_on_fuel_spawner_timer_timeout"]
[connection signal="body_entered" from="CanvasLayer2/BlackHole/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="toggled" from="CanvasLayer/HBoxContainer2/ToggleMobileUI" to="." method="_on_button_toggled"]
[connection signal="toggled" from="CanvasLayer/HBoxContainer2/ToggleMobileUI" to="CharacterBody2D" method="_on_toggle_mobile_ui_toggled"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer2/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverPanel/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverPanel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PausePanel/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PausePanel/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PausePanel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StartMenuPanel/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StartMenuPanel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="Path2D/RandomSpawner/Timer" to="Path2D/RandomSpawner" method="_on_timer_timeout"]
